fix(ui): allowed theme conversion button to be shown on mobile

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -97,9 +97,10 @@
     text-align: center;
   }
   .section__pic-container {
-    width: auto;
+    width: 46vw;
     height: 46vw;
     justify-content: center;
+    margin: 0 auto 2rem;
   }
   .section__text__p2 {
     font-size: 1.25rem;
@@ -108,6 +109,6 @@
     font-size: 2rem;
   }
   .text-container {
-    text-align: justify;
+    text-align: left;
   }
 }
